Camino only - Bug 549179: Switch to using a custom spotlight importer for bookmarks. r/sr=pink